--- a/app/src/main/res/layout/activity_neighbour_detail.xml
+++ b/app/src/main/res/layout/activity_neighbour_detail.xml
@@ -23,12 +23,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:clickable="true"
-        app:backgroundTint="#F5F5F5"
+        app:backgroundTint="#F44336"
         app:layout_constraintBottom_toBottomOf="@+id/neighbour_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neighbour_avatar"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_star_white_24dp" />
+        app:srcCompat="@drawable/ic_star_yellow_24dp" />
 
     <ImageButton
         android:id="@+id/back_button"
