--- a/app/src/main/res/layout/activity_neighbour_detail.xml
+++ b/app/src/main/res/layout/activity_neighbour_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECEFF0"
-    tools:context=".ui.neighbour_list.NeighbourDetailActivity">
+    tools:context=".ui.neighbour_list.ActivityNeighbourDetail">
 
     <ImageView
         android:id="@+id/neighbour_avatar"
@@ -27,8 +27,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/neighbour_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neighbour_avatar"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_star_yellow_24dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/back_button"
