--- a/app/src/main/res/layout/activity_neighbour_detail.xml
+++ b/app/src/main/res/layout/activity_neighbour_detail.xml
@@ -11,6 +11,7 @@
         android:id="@+id/neighbour_avatar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:contentDescription="@android:string/untitled"
         android:scaleType="centerCrop"
         app:layout_constraintHeight_percent="0.4"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +24,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:clickable="true"
-        app:backgroundTint="#F44336"
+        android:contentDescription="@android:string/untitled"
+        android:focusable="true"
+        app:backgroundTint="#F5F5F5"
         app:layout_constraintBottom_toBottomOf="@+id/neighbour_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neighbour_avatar"
@@ -49,19 +52,19 @@
         android:layout_marginBottom="16dp"
         android:text="@string/neighbour_name"
         android:textColor="#FFFFFF"
-        android:textSize="30sp"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="@+id/neighbour_avatar"
         app:layout_constraintStart_toStartOf="@+id/neighbour_avatar" />
 
     <android.support.v7.widget.CardView
-        android:id="@+id/CardView"
+        android:id="@+id/cardView_informations"
         android:layout_width="0dp"
-        android:layout_height="168dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
         app:cardCornerRadius="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintBottom_toTopOf="@+id/cardView_about"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.35"
         app:layout_constraintHorizontal_bias="0.529"
@@ -79,7 +82,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/neighbour_name"
-                android:textSize="24sp"
+                android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintHorizontal_weight="0.4"
@@ -179,7 +182,7 @@
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cardView_about"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
@@ -190,7 +193,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.20"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CardView">
+        app:layout_constraintTop_toBottomOf="@+id/cardView_informations">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -203,7 +206,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="@string/about"
-                android:textSize="30dp"
+                android:textSize="30sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
