--- a/app/src/main/res/layout/activity_neighbour_detail.xml
+++ b/app/src/main/res/layout/activity_neighbour_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECEFF0"
-    tools:context=".ui.neighbour_list.ActivityNeighbourDetail">
+    tools:context=".ui.neighbour_list.NeighbourDetailActivity">
 
     <ImageView
         android:id="@+id/neighbour_avatar"
